oneOf in bods-package and adding statementType

--- a/tests/notebooks/bods_schema_test.ipynb
+++ b/tests/notebooks/bods_schema_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +16,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load schema and subschemas"
+    "# Define tests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resolver = RefResolver('file://' + absolute_path_to_schema_dir + '/', None)\n",
+    "\n",
+    "def test_valid_json(json_data, schema, resolver):\n",
+    "    validate(json_data, schema, resolver=resolver)\n",
+    "\n",
+    "\n",
+    "def test_invalid_json(json_data, schema, resolver):\n",
+    "    with pytest.raises(ValidationError):\n",
+    "        validate(json_data, schema, resolver=resolver)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load schema and subschemas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,31 +101,9 @@
     "with open('../data/beneficial-ownership-statement/valid/valid-beneficial-ownership-statement.json') as f:\n",
     "    valid_beneficial_ownership_statement = json.load(f)\n",
     "with open('../data/beneficial-ownership-statement/invalid/beneficial-ownership-statement-with-invalid-statement-id.json') as f:\n",
-    "    invalid_beneficial_ownership_statement = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Define tests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resolver = RefResolver('file://' + absolute_path_to_schema_dir + '/', None)\n",
-    "\n",
-    "def test_valid_json(json_data, schema, resolver):\n",
-    "    validate(json_data, schema, resolver=resolver)\n",
-    "\n",
-    "\n",
-    "def test_invalid_json(json_data, schema, resolver):\n",
-    "    with pytest.raises(ValidationError):\n",
-    "        validate(json_data, schema, resolver=resolver)"
+    "    invalid_beneficial_ownership_statement = json.load(f)\n",
+    "with open('../data/beneficial-ownership-statement/invalid/beneficial-ownership-statement-no-statement-type.json') as f:\n",
+    "    no_statement_type_beneficial_ownership_statement = json.load(f)"
    ]
   },
   {
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,14 +133,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_invalid_json(invalid_person, person_statement_schema, resolver)\n",
     "test_invalid_json(invalid_entity, entity_statement_schema, resolver)\n",
-    "test_invalid_json(invalid_beneficial_ownership_statement, beneficial_ownership_statement_schema, resolver)"
+    "test_invalid_json(invalid_beneficial_ownership_statement, beneficial_ownership_statement_schema, resolver)\n",
+    "test_invalid_json(no_statement_type_beneficial_ownership_statement, beneficial_ownership_statement_schema, resolver)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_bods_package = [valid_entity, valid_person, valid_beneficial_ownership_statement]\n",
+    "invalid_bods_package = [valid_entity, valid_person, invalid_beneficial_ownership_statement]\n",
+    "another_invalid_bods_package = [valid_entity, valid_person, no_statement_type_beneficial_ownership_statement]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_valid_json(valid_bods_package, bods_package_schema, resolver)\n",
+    "test_invalid_json(invalid_bods_package, bods_package_schema, resolver)\n",
+    "test_invalid_json(another_invalid_bods_package, bods_package_schema, resolver)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_invalid_json([no_statement_type_beneficial_ownership_statement], bods_package_schema, resolver)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'$schema': 'http://json-schema.org/draft-04/schema#',\n",
+       " 'id': 'bods-package.json',\n",
+       " 'items': {'oneOf': [{'$ref': 'entity-statement.json'},\n",
+       "   {'$ref': 'person-statement.json'},\n",
+       "   {'$ref': 'beneficial-ownership-statement.json'}]},\n",
+       " 'type': 'array',\n",
+       " 'version': '0.1'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bods_package_schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
