valid bods_package schema test data

--- a/tests/notebooks/bods_schema_test.ipynb
+++ b/tests/notebooks/bods_schema_test.ipynb
@@ -103,7 +103,10 @@
     "with open('../data/beneficial-ownership-statement/invalid/beneficial-ownership-statement-with-invalid-statement-id.json') as f:\n",
     "    invalid_beneficial_ownership_statement = json.load(f)\n",
     "with open('../data/beneficial-ownership-statement/invalid/beneficial-ownership-statement-no-statement-type.json') as f:\n",
-    "    no_statement_type_beneficial_ownership_statement = json.load(f)"
+    "    no_statement_type_beneficial_ownership_statement = json.load(f)\n",
+    "#BODS package statements\n",
+    "with open('../data/bods-package/valid/valid-bods-package.json') as f:\n",
+    "    valid_bods_package = json.load(f)"
    ]
   },
   {
@@ -121,7 +124,8 @@
    "source": [
     "test_valid_json(valid_entity, entity_statement_schema, resolver)\n",
     "test_valid_json(valid_person, person_statement_schema, resolver)\n",
-    "test_valid_json(valid_beneficial_ownership_statement, beneficial_ownership_statement_schema, resolver)"
+    "test_valid_json(valid_beneficial_ownership_statement, beneficial_ownership_statement_schema, resolver)\n",
+    "test_valid_json(valid_bods_package, bods_package_schema, resolver)"
    ]
   },
   {
@@ -149,55 +153,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "valid_bods_package = [valid_entity, valid_person, valid_beneficial_ownership_statement]\n",
     "invalid_bods_package = [valid_entity, valid_person, invalid_beneficial_ownership_statement]\n",
-    "another_invalid_bods_package = [valid_entity, valid_person, no_statement_type_beneficial_ownership_statement]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_valid_json(valid_bods_package, bods_package_schema, resolver)\n",
+    "another_invalid_bods_package = [valid_entity, valid_person, no_statement_type_beneficial_ownership_statement]\n",
     "test_invalid_json(invalid_bods_package, bods_package_schema, resolver)\n",
     "test_invalid_json(another_invalid_bods_package, bods_package_schema, resolver)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_invalid_json([no_statement_type_beneficial_ownership_statement], bods_package_schema, resolver)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'$schema': 'http://json-schema.org/draft-04/schema#',\n",
-       " 'id': 'bods-package.json',\n",
-       " 'items': {'oneOf': [{'$ref': 'entity-statement.json'},\n",
-       "   {'$ref': 'person-statement.json'},\n",
-       "   {'$ref': 'beneficial-ownership-statement.json'}]},\n",
-       " 'type': 'array',\n",
-       " 'version': '0.1'}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bods_package_schema"
    ]
   }
  ],
