--- a/tests/notebooks/bods_schema_test.ipynb
+++ b/tests/notebooks/bods_schema_test.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -17,9 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sys.path.append(os.path.abspath(os.path.join('..')))\n",
@@ -33,9 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def check_valid_statement(path):\n",
@@ -46,11 +40,8 @@
     "    \"\"\"\n",
     "    with open(path) as f:\n",
     "        statement = json.load(f)\n",
-    "    try:\n",
-    "        bods_validate_statement(statement)\n",
-    "    except ValidationError as e:\n",
-    "        for error in bods_iter_errors_statement(statement):\n",
-    "            print(str(error))\n",
+    "    for error in bods_iter_errors_statement(statement):\n",
+    "        print(str(error))\n",
     "            \n",
     "def check_valid_package(path):\n",
     "    \"\"\"\n",
@@ -60,11 +51,8 @@
     "    \"\"\"\n",
     "    with open(path) as f:\n",
     "        package = json.load(f)\n",
-    "    try:\n",
-    "        bods_validate_package(package)\n",
-    "    except ValidationError as e:\n",
-    "        for error in bods_iter_errors_package(package):\n",
-    "            print(str(error))"
+    "    for error in bods_iter_errors_package(package):\n",
+    "        print(str(error))"
    ]
   },
   {
@@ -77,9 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "path = \"../data/beneficial-ownership-statement/invalid/beneficial-ownership-statement-no-statement-type.json\"\n",
@@ -89,9 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "check_valid_statement(\"../data/entity-statement/invalid/entity-statement-with-invalid-statement-id-no-entity-type.json\")"
@@ -107,9 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "path = \"../data/bods-package/fails-secondary-validation/bods-package-missing-entity-statement.json\"\n",
@@ -126,9 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
@@ -136,20 +116,11 @@
     "cd ..\n",
     "pytest -v"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -163,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
