--- a/docs/locale/es/LC_MESSAGES/codelist.po
+++ b/docs/locale/es/LC_MESSAGES/codelist.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-05-23 14:34+0000\n"
-"PO-Revision-Date: 2019-03-13 21:36+0000\n"
+"POT-Creation-Date: 2019-06-18 16:06+0100\n"
+"PO-Revision-Date: 2019-06-17 11:01+0000\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -55,29 +55,69 @@ msgstr ""
 msgid "Place of birth"
 msgstr ""
 
+#. description
+#: schema/codelists/addressType.csv:1
+msgid ""
+"The place where a person was born. This must only be used to describe "
+"natural persons. Only a town and country are required."
+msgstr ""
+
 #. title
 #: schema/codelists/addressType.csv:2
-msgid "Home address"
+msgid "Residential address"
+msgstr ""
+
+#. description
+#: schema/codelists/addressType.csv:2
+msgid ""
+"An address where someone lives. This must only be used for natural persons."
 msgstr ""
 
 #. title
 #: schema/codelists/addressType.csv:3
-msgid "Residential address"
+msgid "Registered address"
+msgstr ""
+
+#. description
+#: schema/codelists/addressType.csv:3
+msgid ""
+"An official address for delivering statutory mail and legal notices which "
+"must be provided to company registers. This must only be used to describe "
+"entities."
 msgstr ""
 
 #. title
 #: schema/codelists/addressType.csv:4
-msgid "Registered address"
+msgid "Service address"
+msgstr ""
+
+#. description
+#: schema/codelists/addressType.csv:4
+msgid ""
+"An address which can be used as an alternative to a residential address for "
+"the purpose of receiving post. This must only be used for natural persons."
 msgstr ""
 
 #. title
 #: schema/codelists/addressType.csv:5
-msgid "Service address"
+msgid "Alternative address"
+msgstr ""
+
+#. description
+#: schema/codelists/addressType.csv:5
+msgid ""
+"An address provided in addition to the primary address for this entity or "
+"person that is neither a service nor a registered address."
 msgstr ""
 
 #. title
 #: schema/codelists/addressType.csv:6
-msgid "Alternative address"
+msgid "Business address"
+msgstr ""
+
+#. description
+#: schema/codelists/addressType.csv:6
+msgid "A place where the entity conducts its business."
 msgstr ""
 
 #. title
@@ -126,8 +166,8 @@ msgstr ""
 #. description
 #: schema/codelists/annotationMotivation.csv:4
 msgid ""
-"The description provide contextual material that explains the field, object "
-"or statement. URLs to linked material are be provided in the url field."
+"The description explains how linked material relates to the field, object or"
+" statement. A URL to linked material MUST be provided in the `url` field."
 msgstr ""
 
 #. title
@@ -163,9 +203,9 @@ msgstr ""
 #. description
 #: schema/codelists/entityType.csv:2
 msgid ""
-"A body with distinct legal personality, such as a government departments or "
-"international institutions, but which is not otherwise uniquely identified "
-"in some official register."
+"A body with distinct legal personality, such as a government department or "
+"international institution, but which is not otherwise uniquely identified in"
+" some official register."
 msgstr ""
 
 #. title
@@ -238,9 +278,24 @@ msgstr ""
 msgid "Shareholding"
 msgstr ""
 
+#. description
+#: schema/codelists/interestType.csv:1
+msgid "An economic interest in an entity gained by holding shares."
+msgstr ""
+
 #. title
 #: schema/codelists/interestType.csv:2
 msgid "Voting rights"
+msgstr ""
+
+#. description
+#: schema/codelists/interestType.csv:2
+msgid ""
+"A controlling interest in an entity gained by holding shares. Defined as the"
+" right of shareholders to vote on matters of corporate policy, including "
+"decisions on the makeup of the board of directors, issuing securities, "
+"initiating corporate actions and making substantial changes in the "
+"corporation's operations."
 msgstr ""
 
 #. title
@@ -248,9 +303,29 @@ msgstr ""
 msgid "Appointment of board"
 msgstr ""
 
+#. description
+#: schema/codelists/interestType.csv:3
+msgid ""
+"A controlling interest in an entity. Defined as the absolute right to "
+"appoint members of the board of directors."
+msgstr ""
+
 #. title
 #: schema/codelists/interestType.csv:4
-msgid "Influence or control"
+msgid "Other influence or control"
+msgstr ""
+
+#. description
+#: schema/codelists/interestType.csv:4
+msgid ""
+"\"Any influence or control in an entity that is distinct from being a "
+"shareholder"
+msgstr ""
+
+#. technical note
+#: schema/codelists/interestType.csv:4
+msgid ""
+"having voting rights or having the absolute right to appoint to the board.\""
 msgstr ""
 
 #. title
@@ -258,9 +333,25 @@ msgstr ""
 msgid "Senior managing official"
 msgstr ""
 
+#. description
+#: schema/codelists/interestType.csv:5
+msgid ""
+"A controlling interest in an entity gained by employment. Defined as the "
+"person who exercises control over the management of the entity."
+msgstr ""
+
 #. title
 #: schema/codelists/interestType.csv:6
 msgid "Settlor of trust"
+msgstr ""
+
+#. description
+#: schema/codelists/interestType.csv:6
+msgid ""
+"A controlling interest in a trust. Defined as the person who gives property "
+"into trust for the benefit of beneficiaries. In some legal systems, a "
+"settlor is also referred to as a trustor, or occasionally, a grantor or "
+"donor."
 msgstr ""
 
 #. title
@@ -268,9 +359,24 @@ msgstr ""
 msgid "Trustee of a trust."
 msgstr ""
 
+#. description
+#: schema/codelists/interestType.csv:7
+msgid ""
+"A controlling interest in a trust. Defined as a person or firm that holds "
+"and administers property or assets for the benefit of a third party."
+msgstr ""
+
 #. title
 #: schema/codelists/interestType.csv:8
 msgid "Protector of a trust"
+msgstr ""
+
+#. description
+#: schema/codelists/interestType.csv:8
+msgid ""
+"A controlling interest in a trust. Defined as a person appointed under the "
+"trust instrument to direct or restrain the trustees in relation to their "
+"administration of the trust."
 msgstr ""
 
 #. title
@@ -278,14 +384,35 @@ msgstr ""
 msgid "Beneficiary of a trust"
 msgstr ""
 
+#. description
+#: schema/codelists/interestType.csv:9
+msgid ""
+"An economic interest in a trust. Defined as a person or legal entity who "
+"profits from a trust's holdings or activities."
+msgstr ""
+
 #. title
 #: schema/codelists/interestType.csv:10
 msgid "Other influence or control of a trust"
 msgstr ""
 
+#. description
+#: schema/codelists/interestType.csv:10
+msgid ""
+"Any influence or control in a trust that is distinct from being a settlor, "
+"trustee, protector or beneficiary."
+msgstr ""
+
 #. title
 #: schema/codelists/interestType.csv:11
-msgid "Rights to surplus assets"
+msgid "Rights to surplus assets on dissolution"
+msgstr ""
+
+#. description
+#: schema/codelists/interestType.csv:11
+msgid ""
+"The right to a share in the amount of an asset or resource that exceeds the "
+"portion that is utilized upon the winding up of an entity."
 msgstr ""
 
 #. title
@@ -293,9 +420,45 @@ msgstr ""
 msgid "Rights to receive profits or income"
 msgstr ""
 
+#. description
+#: schema/codelists/interestType.csv:12
+msgid ""
+"An economic interest in an entity. Defined as beneficial ownership rights "
+"beyond those otherwise implied by ownership structures that are granted by "
+"contract."
+msgstr ""
+
+#. title
+#: schema/codelists/interestType.csv:13
+msgid "Rights granted by contract"
+msgstr ""
+
+#. description
+#: schema/codelists/interestType.csv:13
+msgid "An interest that is granted by contract."
+msgstr ""
+
+#. title
+#: schema/codelists/interestType.csv:14
+msgid "Conditional rights granted by contract"
+msgstr ""
+
+#. description
+#: schema/codelists/interestType.csv:14
+msgid "\"An interest that exists only if some contractual condition is met.\""
+msgstr ""
+
 #. title
 #: schema/codelists/nameType.csv:1
-msgid "Given name"
+msgid "Legal name"
+msgstr ""
+
+#. description
+#: schema/codelists/nameType.csv:1
+msgid ""
+"A name that identifies the person for legal, administrative and other "
+"official purposes. A person's legal name will usually be the one that is "
+"found on official government documents."
 msgstr ""
 
 #. title
@@ -303,29 +466,52 @@ msgstr ""
 msgid "Translation of name"
 msgstr ""
 
+#. description
+#: schema/codelists/nameType.csv:2
+msgid "A translation of the person's individual name in a different language."
+msgstr ""
+
 #. title
 #: schema/codelists/nameType.csv:3
-msgid "Former name"
+msgid "Transliteration of name"
+msgstr ""
+
+#. description
+#: schema/codelists/nameType.csv:3
+msgid ""
+"\"A transliteration of the person's individual name in a different script.\""
 msgstr ""
 
 #. title
 #: schema/codelists/nameType.csv:4
-msgid "Alias"
+msgid "Former name"
+msgstr ""
+
+#. description
+#: schema/codelists/nameType.csv:4
+msgid "A name that the person has used in the past."
 msgstr ""
 
 #. title
 #: schema/codelists/nameType.csv:5
-msgid "Also Known As"
+msgid "Alternative name"
+msgstr ""
+
+#. description
+#: schema/codelists/nameType.csv:5
+msgid ""
+"Another name that the person is known by. This might be an alias, a nickname"
+" or a name that the person is also known as (aka)."
 msgstr ""
 
 #. title
 #: schema/codelists/nameType.csv:6
-msgid "Nickname"
+msgid "Birth name"
 msgstr ""
 
-#. title
-#: schema/codelists/nameType.csv:7
-msgid "Birth name"
+#. description
+#: schema/codelists/nameType.csv:6
+msgid "\"The legal name of the person at birth.\""
 msgstr ""
 
 #. title
@@ -425,10 +611,17 @@ msgstr ""
 msgid "Person Statement"
 msgstr ""
 
+#. description
+#: schema/codelists/statementType.csv:1
+msgid ""
+"The statement contains information known about a natural person at a "
+"particular point in time, or from a given submission of information."
+msgstr ""
+
 #. technical note
 #: schema/codelists/statementType.csv:1
 msgid ""
-"The parent object should be validated using the person-statement schema."
+"The parent object should be validated using the Person Statement schema."
 msgstr ""
 
 #. title
@@ -436,22 +629,36 @@ msgstr ""
 msgid "Entity Statement"
 msgstr ""
 
+#. description
+#: schema/codelists/statementType.csv:2
+msgid ""
+"The statement contains information that identifies and describes an entity "
+"at a particular point in time, or from a given submission of information."
+msgstr ""
+
 #. technical note
 #: schema/codelists/statementType.csv:2
 msgid ""
-"The parent object should be validated using the entity-statement schema"
+"The parent object should be validated using the Entity Statement schema."
 msgstr ""
 
 #. title
 #: schema/codelists/statementType.csv:3
-msgid "Ownership or Control Statement"
+msgid "Ownership-or-control Statement"
+msgstr ""
+
+#. description
+#: schema/codelists/statementType.csv:3
+msgid ""
+"The statement contains details of the interests held by an interested party "
+"in an entity at a particular point in time."
 msgstr ""
 
 #. technical note
 #: schema/codelists/statementType.csv:3
 msgid ""
-"The parent object should be validated using the ownership-or-control-"
-"statement schema."
+"The parent object should be validated using the Ownership-or-control "
+"Statement schema."
 msgstr ""
 
 #. title
@@ -524,4 +731,17 @@ msgstr ""
 #. description
 #: schema/codelists/unspecifiedReason.csv:6
 msgid "The reason an interested party cannot be provided is not known."
+msgstr ""
+
+#. title
+#: schema/codelists/unspecifiedReason.csv:7
+msgid "Information unknown to the publisher of the data"
+msgstr ""
+
+#. description
+#: schema/codelists/unspecifiedReason.csv:7
+msgid ""
+"A publisher does not have access to information on this person or entity. "
+"This should not generally be used in situations where one party has the "
+"responsibility to provide such information."
 msgstr ""
